<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_160sdp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"

    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:paddingBottom="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="95dp"
            android:contentDescription="@string/t"
            android:scaleType="centerCrop"
            android:src="@drawable/hamburger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ProductTitle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <TextView
            android:id="@+id/ProductDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/product_description"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ProductTitle"
            app:layout_constraintTop_toBottomOf="@+id/ProductTitle" />


        <TextView
            android:id="@+id/ProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ProductDescription"
            app:layout_constraintTop_toBottomOf="@+id/ProductDescription" />

        <RatingBar
            android:id="@+id/rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:numStars="5"
            android:progressTint="@color/yellow"
            android:rating="4.5"
            android:secondaryProgressTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>