<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:focusable="true"
    app:cardElevation="10dp"
    android:checkable="true"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="20dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:background="#FF9800"
                android:contentDescription="@string/t"
                android:scaleType="centerCrop"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.012"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/userNameTv"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:text="@string/user_names"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.317"
                app:layout_constraintStart_toEndOf="@+id/userImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/emileTv"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Emile address"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/userNameTv"
                app:layout_constraintTop_toBottomOf="@+id/userNameTv" />

            <TextView
                android:id="@+id/PasswordTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/passwords"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/emileTv"
                app:layout_constraintTop_toBottomOf="@+id/emileTv" />


        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>