<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="#FF5722"
            app:expandedTitleMarginEnd="25sp"
            app:expandedTitleMarginStart="10sp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/box_open"
                app:layout_collapseMode="parallax" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_margin="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_name"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"


                    android:hint="@string/product_description"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:hint="@string/product_price"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_margin="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_quantity"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:elevation="@dimen/_2sdp"
                app:itemIconSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/details_menu"
                app:labelVisibilityMode="selected"
                />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>