<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingInActivity">

    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="0dp"
        android:layout_height="270dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todos"
        android:scaleType="centerCrop"
        android:src="@drawable/img_4"
        app:layout_constraintBottom_toTopOf="@+id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/singInTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sing_in"
                android:textColor="#FFFF9800"
                android:textSize="30sp"
                android:textStyle="italic|bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userLayaut"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="25dp"
                android:background="@color/white"

                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singInTv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/user_name" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconMode="password_toggle"
                app:endIconTint="#FF9800"
                app:errorEnabled="true"
                app:helperText="Enter Strong Password"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/PasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="e-mile"
                app:counterEnabled="false"
                app:layout_constraintEnd_toEndOf="@+id/userLayaut"
                app:layout_constraintStart_toStartOf="@+id/userLayaut"
                app:layout_constraintTop_toBottomOf="@+id/userLayaut"
                app:placeholderText="example@gemile.com">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emileEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                    android:drawablePadding="10dp"
                    android:hapticFeedbackEnabled="false" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/createBt"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@drawable/button"
                android:text="@string/create"
                android:textSize="15sp"
                android:textStyle="italic"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="233dp" />
    <!--TODO-->
    <!--    <RadioGroup-->
    <!--        android:id="@+id/radioGroup"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->

    <!--        android:layout_marginTop="20dp"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/textInputLayout"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">-->

    <!--        <RadioButton-->
    <!--            android:text="Owner"-->
    <!--            android:textSize="18sp"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_weight="@integer/material_motion_duration_long_1" />-->

    <!--        <RadioButton-->
    <!--            android:text="Customer"-->
    <!--            android:textSize="18sp"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_weight="@integer/material_motion_duration_long_1" />-->


    <!--    </RadioGroup>-->


</androidx.constraintlayout.widget.ConstraintLayout>