<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewProductActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="#FF5722"
            app:expandedTitleMarginEnd="25sp"
            app:expandedTitleMarginStart="10sp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic__add_24"
                app:civ_border_color="@color/black"

                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_name"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_margin="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:hint="@string/product_description"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_height="wrap_content"
                android:layout_margin="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/product_price"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_quantity"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame_layout"/>
    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BottomAppBar"
        android:background="@color/white"
        android:layout_gravity="bottom"
        app:fabCradleRoundedCornerRadius="@dimen/_50sdp"
        >

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_100sdp"
            android:id="@+id/BottomNavigationView"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@android:color/transparent"
            app:menu="@menu/add"

            />

    </com.google.android.material.bottomappbar.BottomAppBar>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/floatingBt"
        android:layout_height="wrap_content"
        app:maxImageSize="@dimen/_30sdp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_anchor="@id/BottomAppBar"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>